Added writer to file